[gd_scene load_steps=49 format=2]

[ext_resource path="res://sprite/robot/Idle (5).png" type="Texture" id=1]
[ext_resource path="res://sprite/robot/Idle (2).png" type="Texture" id=2]
[ext_resource path="res://sprite/robot/Idle (1).png" type="Texture" id=3]
[ext_resource path="res://sprite/robot/Run (2).png" type="Texture" id=4]
[ext_resource path="res://sprite/robot/Idle (6).png" type="Texture" id=5]
[ext_resource path="res://sprite/robot/Idle (4).png" type="Texture" id=6]
[ext_resource path="res://sprite/robot/Run (1).png" type="Texture" id=7]
[ext_resource path="res://sprite/robot/Idle (7).png" type="Texture" id=8]
[ext_resource path="res://sprite/robot/Idle (10).png" type="Texture" id=9]
[ext_resource path="res://sprite/robot/Idle (8).png" type="Texture" id=10]
[ext_resource path="res://sprite/robot/Idle (9).png" type="Texture" id=11]
[ext_resource path="res://sprite/robot/Run (3).png" type="Texture" id=12]
[ext_resource path="res://sprite/robot/Run (8).png" type="Texture" id=13]
[ext_resource path="res://sprite/robot/Run (5).png" type="Texture" id=14]
[ext_resource path="res://sprite/robot/Run (6).png" type="Texture" id=15]
[ext_resource path="res://sprite/robot/Run (7).png" type="Texture" id=16]
[ext_resource path="res://sprite/robot/Run (4).png" type="Texture" id=17]
[ext_resource path="res://sprite/robot/Jump (4).png" type="Texture" id=18]
[ext_resource path="res://sprite/robot/Idle (3).png" type="Texture" id=19]
[ext_resource path="res://sprite/robot/Jump (3).png" type="Texture" id=20]
[ext_resource path="res://sprite/robot/Jump (6).png" type="Texture" id=21]
[ext_resource path="res://sprite/robot/Jump (1).png" type="Texture" id=22]
[ext_resource path="res://sprite/robot/Jump (2).png" type="Texture" id=23]
[ext_resource path="res://sprite/robot/Jump (5).png" type="Texture" id=24]
[ext_resource path="res://sprite/robot/Dead (7).png" type="Texture" id=25]
[ext_resource path="res://sprite/robot/Dead (9).png" type="Texture" id=26]
[ext_resource path="res://sprite/robot/Dead (5).png" type="Texture" id=27]
[ext_resource path="res://sprite/robot/Dead (8).png" type="Texture" id=28]
[ext_resource path="res://sprite/robot/Dead (4).png" type="Texture" id=29]
[ext_resource path="res://sprite/robot/Dead (3).png" type="Texture" id=30]
[ext_resource path="res://sprite/robot/Dead (2).png" type="Texture" id=31]
[ext_resource path="res://sprite/robot/Dead (6).png" type="Texture" id=32]
[ext_resource path="res://sprite/robot/Jump (9).png" type="Texture" id=33]
[ext_resource path="res://sprite/robot/Jump (8).png" type="Texture" id=34]
[ext_resource path="res://sprite/robot/Dead (1).png" type="Texture" id=35]
[ext_resource path="res://sprite/robot/Jump (10).png" type="Texture" id=36]
[ext_resource path="res://sprite/robot/Jump (7).png" type="Texture" id=37]
[ext_resource path="res://sprite/robot/Dead (10).png" type="Texture" id=38]
[ext_resource path="res://script/Player.gd" type="Script" id=39]
[ext_resource path="res://sprite/robot/Shoot (1).png" type="Texture" id=40]
[ext_resource path="res://sprite/robot/Shoot (2).png" type="Texture" id=41]
[ext_resource path="res://sprite/robot/Shoot (3).png" type="Texture" id=42]
[ext_resource path="res://sprite/robot/Shoot (4).png" type="Texture" id=43]
[ext_resource path="res://music/error_007.ogg" type="AudioStream" id=44]
[ext_resource path="res://music/jump1.ogg" type="AudioStream" id=45]
[ext_resource path="res://music/switch23.ogg" type="AudioStream" id=46]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 19 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 33 ), ExtResource( 36 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 13 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "shoot",
"speed": 3.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 31 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 38 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 33.8558
height = 46.4906

[node name="Player" type="KinematicBody2D"]
position = Vector2( 48.2844, -66.2312 )
collision_mask = 46
script = ExtResource( 39 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.250249, 0.250249 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.17839, 4.36805 )
shape = SubResource( 2 )

[node name="RayL" type="RayCast2D" parent="."]
position = Vector2( -19.8438, 1.57489 )

[node name="RayR" type="RayCast2D" parent="."]
position = Vector2( 11.3393, 1.88986 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 44 )
volume_db = -20.0

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 45 )
volume_db = -20.0

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 46 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 72.0368, 50.6506 )
__meta__ = {
"_gizmo_extents_": 32.0
}

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
